# optiqal-ai

./: .gitignore  .vercelignore  API_IMPLEMENTATION_SUMMARY.md  PRECOMPUTED_BASELINES_SUMMARY.md  README.md  REPRODUCIBILITY.md  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.beads/: issues.jsonl
.github/workflows/: deploy-paper.yml
data/: .gitignore
data/nhanes/: calibration.json
data/pan-ukb/: README.md
docs/: .gitignore  README.md  REVIEW_REQUEST.md  appendix.md  index.md  methodology.md  myst.yml  optiqal_results.py  precomputed-baselines.md  precomputed-quick-start.md  pyproject.toml  references.bib
docs/validation/: pan-ukb-plan.md
e2e/: analyze.spec.ts
examples/: api-usage.tsx
notebooks/: pan-ukb-validation.ipynb
public/precomputed/: baseline_profiles.json  baselines.json  daily_exercise_moderate_profiles.json  daily_sunscreen.json  daily_sunscreen_profiles.json  fish_oil_supplement_profiles.json  meditation_daily_profiles.json  mediterranean_diet_profiles.json  moderate_alcohol_profiles.json  quit_smoking_profiles.json  sleep_8_hours_profiles.json  strength_training_profiles.json  walking_30min_daily.json  (+1 more)
python/: README.md  pyproject.toml
python/examples/: precomputed_example.py
python/optiqal/: __init__.py  bayesian.py  bayesian_updating.py  combination.py  confounding.py  intervention.py  lifecycle.py  markov.py  population.py  precompute.py  profile.py  simulate.py
python/optiqal/data/: baselines.json  condition_joint_distribution.json
python/optiqal/data/meps/: fetch_meps.py  meps_combined.parquet  quality_weight_calibration.json
python/tests/: test_combination.py  test_confounding.py  test_intervention.py  test_lifecycle.py  test_mortality_multipliers.py  test_precompute.py  test_simulate.py
scripts/: README.md  calibrate_nhanes.py  download-pan-ukb.py  install_mr_packages.R  mr_analysis.R  mr_analysis.py  precompute_all.py  precompute_baseline_profiles.py  precompute_baselines.py  precompute_profiles.py  validate_precomputed.py
src/: App.tsx  index.css  types.ts
src/api/: analyze.ts
(+123 files in other folders)
